
2012-08-21  Carsten Haitzler (The Rasterman)

	* Spotted an incompleteness. there is a way to set Elm_Win_Trap for
          manual render, but no way to go to an elm win and do this (And
          of course twiddle with the norender state too), so add this in.
          elm_win_norender_push(), elm_win_norender_pop(),
          elm_win_norender_get() and elm_win_render() added.

2012-08-21  Shinwoo Kim (kimcinoo)

	* Patch in incomplete access support in segment control and spinner

2012-08-28  Carsten Haitzler (The Rasterman)

	* Track window states as a total count and be able to self-throttle
          or suspend rendering as a result.

2012-08-30  Carsten Haitzler (The Rasterman)

        1.7.0 release

2012-08-30  Shilpa Onkar Singh

	* Naviframe's item Subtitle_label deleted in item_free.

2012-08-31  WooHyun Jung

	* The state of elm_check is now changed by mouse click event.

2012-09-03  Rajeev Ranjan

        * Fix min/max limit setting to respect field boundaires EXCEPT
          for years which have no boundaries with
          elm_datetime_field_limit_set()

2012-09-03  Bluezery

        * Fix re-order animation when it doesn't end correctly.
        
2012-09-03  Shinwoo Kim (kimcinoo)

        * Fix popup to apply the same style to the notify sub-widget.
        
2012-09-12  Thiep Ha

        * Fix ctxpopup direction if -1 is uses as priority.

2012-09-13  M.V.K. Sumanth

        * Fix diskselector when bounce off and round enabled.

2012-09-14  Shinwoo Kim (kimcinoo)

        * Fix info field set for bubble widget.

2012-09-19 Michael Bouchaud (yoz)

        * fix resizing on naviframe when an item is poped

2012-09-20 Michael Bouchaud (yoz)

         * fix wrong size calc in naviframe when an item have setted
           tittle_visible_set to false.

2012-09-25  Cedric Bail

	* Escape theme filename correctly.

2012-09-28  Shinwoo Kim (kimcinoo)

        * Fix disk selector selection of middle item when obj not at 0.