@@ -63,3 +63,4 @@ Artem Popov <artem.popov@samsung.com>
 Minseok Kim <minseok3.kim@samsung.com>
 Jean-Philippe André <jpeg@videolan.org>
 JiHyeon Seol <jihyeon.seol@samsung.com>
+Igor Murzov <e-mail@date.by>
