@@ -13,7 +13,9 @@ Fixes:
    * Fix bubble info field set.
    * Escape theme filename correctly.
    * Fix diskselector selection of middle item.
-   
+   * Fix copy&paste error in elm_flip.
+   * Fix possible invalid memory access in elm_access.
+
 Changes since Elementary 1.0.0:
 -------------------------
 
