@@ -460,3 +460,8 @@
 2012-09-28  Shinwoo Kim (kimcinoo)
 
         * Fix disk selector selection of middle item when obj not at 0.
+
+2012-10-04  Igor Murzov
+
+	* fix copy&paste error in elm_flip.
+	* fix possible invalid memory access in elm_access.
